demo/lab-docker-k8s/02-k8s-traefik/web/deployment-svc-ingres.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: devoxx
  labels:
    guilde: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: web-http
  selector:
    labels:
      guilde: web
      faction: server

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: devoxx
  labels:
    guilde: web
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
  - host: lab.nicolas.containous.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
