demo/lab-docker-k8s/02-k8s-traefik/web/svc-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: devoxx
  labels:
    guilde: web
spec:
  ports:
  - port: 80
    name: fake-http
  type: ExternalName
  externalName: redirect.containous.cloud

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: devoxx
  labels:
    guilde: web
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: lab.nicolas.containous.cloud
    http:
      paths:
      - path: /foobar
        backend:
          serviceName: web-service
          servicePort: fake-http
